changement noms, fetch auto API chaque minute, titre condition météo

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <div id="navBar">
             <nav id="desktop-menu">
                 <div>
-                    <img src="./img/favicon.png" height="40px" alt="logo" class="no-select">
+                    <a href="./index.html"><img src="./img/favicon.png" height="40px" alt="logo" class="no-select"></a>
                     <div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div>
                 </div>
                 <ul>
                     <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="./page1.html">La météo</a></li>
-                    <li><a href="./ville.html">Ma ville</a></li>
+                    <li><a href="./la-meteo.html">La météo</a></li>
+                    <li><a href="./ma-ville.html">Ma ville</a></li>
                 </ul>
             </nav>
             <div id="desktop-bar">
@@ -55,8 +55,8 @@
         <div id="mobile-menu">
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
-                <li><a href="./page1.html">La météo</a></li>
-                <li><a href="./ville.html">Ma ville</a></li>
+                <li><a href="./la-meteo.html">La météo</a></li>
+                <li><a href="./ma-ville.html">Ma ville</a></li>
                 <li><div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div></li>
             </ul>
             <div id="return">
@@ -72,14 +72,14 @@
                     <spline-viewer url="https://prod.spline.design/Hoyb0HMmRGRTvTFC/scene.splinecode"></spline-viewer>
                 </div>
                 <p>Consultez la météo</p>
-                <a href="./page1.html" class="btn no-select">Accéder<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
+                <a href="./la-meteo.html" class="btn no-select">Accéder<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
             </div>
 
             <div id="meteo-section">
                 <div id="meteo-section-text">
                     <h2>la météo accessible&nbsp;👀</h2>
                     <p>Restez informé des conditions météorologiques en temps réel. Consultez les prévisions précises pour aujourd’hui et les jours à venir, où que vous soyez. Qu’il fasse soleil, qu’il pleuve ou que le vent souffle, notre service vous accompagne pour mieux planifier vos journées.</p>
-                    <a class="btn no-select" href="./page1.html">Voir la météo<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
+                    <a class="btn no-select" href="./la-meteo.html">Voir la météo<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
                 </div>
                 <div class="no-select" id="meteo-section-img">
                     <img src="img/meteo.png" alt="">
@@ -93,7 +93,7 @@
                 <div id="city-section-text">
                     <h2>des infos sur votre localisation&nbsp;?&nbsp;📍</h2>
                     <p>Peu importe le temps, il y a toujours une activité à faire. Notre service vous propose des idées variées et originales pour profiter pleinement de chaque moment. Que vous cherchiez à vous détendre, à vous divertir ou à vous aventurer, laissez-vous surprendre par nos suggestions pensées pour enrichir votre quotidien.</p>
-                    <a class="btn no-select" href="./ville.html">Les infos<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
+                    <a class="btn no-select" href="./ma-ville.html">Les infos<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
                 </div>
                 
             </div>
