--- a/la-meteo.html
+++ b/la-meteo.html
@@ -6,9 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link preload href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
-    <link rel="stylesheet" href="css/page1.css">
+    <link rel="stylesheet" href="css/la-meteo.css">
     <link rel="stylesheet" href="css/layout.css">
-    <title>Weather for you 🌤</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <title>Weather for you - La Météo</title>
 </head>
 <body>
 
@@ -16,17 +17,17 @@
         <div id="navBar">
             <nav id="desktop-menu">
                 <div>
-                    <img src="./img/favicon.png" height="40px" alt="logo" class="no-select">
+                    <a href="./index.html"><img src="./img/favicon.png" height="40px" alt="logo" class="no-select"></a>
                     <div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div>
                 </div>
                 <ul>
                     <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="./page1.html">La météo</a></li>
-                    <li><a href="./ville.html">Ma ville</a></li>
+                    <li><a href="./la-meteo.html">La météo</a></li>
+                    <li><a href="./ma-ville.html">Ma ville</a></li>
                 </ul>
             </nav>
             <div id="desktop-bar">
-                <img src="./img/favicon.png" height="40px" alt="logo" class="no-select">
+                <a href="./index.html"><img src="./img/favicon.png" height="40px" alt="logo" class="no-select"></a>
                 <div id="mobile-menu-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-align-justify"><path d="M3 12h18"/><path d="M3 18h18"/><path d="M3 6h18"/></svg>
                 </div>
@@ -35,8 +36,8 @@
         <div id="mobile-menu">
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
-                <li><a href="./page1.html">La météo</a></li>
-                <li><a href="./ville.html">Ma ville</a></li>
+                <li><a href="./la-meteo.html">La météo</a></li>
+                <li><a href="./ma-ville.html">Ma ville</a></li>
                 <li><div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div></li>
             </ul>
             <div id="return">
@@ -46,12 +47,12 @@
     </header>
 
     <main>
-        <div id="main-wrapper">
         <div class="loader no-select"></div>
         <div id="reponse" class=""></div>
 
-        <div class="main-wrapper">
+        <div class="meteo-section">
             <h2 class="city">La ville</h2>
+            <h1></h1>
             <div id="meteo-section-img">
                 <img id="broken-clouds" class="no-select" src="img/conditions/broken clouds.svg" alt="image d'un nuage brouillé">
                 <img id="clear-sky" class="no-select" src="img/conditions/clear sky.svg" alt="image d'un ciel clair">
@@ -79,7 +80,6 @@
     </main>
     <script src="javascript/layout.js"></script>
     <script src="./javascript/layout.js"></script>
-    <script src="./javascript/page1.js"></script>
-    
+    <script src="./javascript/la-meteo.js"></script>
 </body>
 </html>
