--- a/ma-ville.html
+++ b/ma-ville.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link preload href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap">
     <link rel="stylesheet" href="./css/layout.css">
-    <link rel="stylesheet" href="./css/ville.css">
+    <link rel="stylesheet" href="./css/ma-ville.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
@@ -22,8 +22,8 @@
                 </div>
                 <ul>
                     <li><a href="./index.html">Accueil</a></li>
-                    <li><a href="./page1.html">La météo</a></li>
-                    <li><a href="./ville.html">Ma ville</a></li>
+                    <li><a href="./la-meteo.html">La météo</a></li>
+                    <li><a href="./ma-ville.html">Ma ville</a></li>
                 </ul>
             </nav>
             <div id="desktop-bar">
@@ -36,8 +36,8 @@
         <div id="mobile-menu">
             <ul>
                 <li><a href="./index.html">Accueil</a></li>
-                <li><a href="./page1.html">La météo</a></li>
-                <li><a href="./ville.html">Ma ville</a></li>
+                <li><a href="./la-meteo.html">La météo</a></li>
+                <li><a href="./ma-ville.html">Ma ville</a></li>
                 <li><div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div></li>
             </ul>
             <div id="return">
@@ -59,6 +59,6 @@
         </div>
     </main>
     <script src="./javascript/layout.js"></script>
-    <script src="./javascript/ville.js"></script>
+    <script src="./javascript/ma-ville.js"></script>
 </body>
 </html>
