alerte timeouts ajustements

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <main>
             <div id="banner">
                 <div id="title">
-                    <h1 class="no-select">weather for you&nbsp;🌞</h1>
+                    <h1 class="no-select">weather for you</h1>
                     <spline-viewer url="https://prod.spline.design/Hoyb0HMmRGRTvTFC/scene.splinecode"></spline-viewer>
                 </div>
                 <p>Consultez la météo</p>
