correction logo glitch reload

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <div id="navBar">
             <nav id="desktop-menu">
                 <div>
-                    <a href="./index.html"><img src="./img/favicon.png" height="40px" width="40px" alt="logo" class="no-select"></a>
+                    <a class="logo-container" href="./index.html">
+                        <img src="./img/favicon.png" height="40px" width="40px" alt="logo" class="no-select">
+                    </a>
                     <div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div>
                 </div>
                 <ul>
