--- a/la-meteo.html
+++ b/la-meteo.html
@@ -12,12 +12,13 @@
     <title>Weather for you - La Météo</title>
 </head>
 <body>
-
     <header>
         <div id="navBar">
             <nav id="desktop-menu">
                 <div>
-                    <a href="./index.html"><img src="./img/favicon.png" height="40px" alt="logo" class="no-select"></a>
+                    <a class="logo-container" href="./index.html">
+                        <img src="./img/favicon.png" height="40px" width="40px" alt="logo" class="no-select">
+                    </a>                    
                     <div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div>
                 </div>
                 <ul>
@@ -45,7 +46,6 @@
             </div>
         </div>
     </header>
-
     <main>
         <div class="loader no-select"></div>
         <div id="reponse" class=""></div>
