--- a/ma-ville.html
+++ b/ma-ville.html
@@ -12,12 +12,13 @@
     <title>Weather for you - Ma Ville</title>
 </head>
 <body>
-
     <header>
         <div id="navBar">
             <nav id="desktop-menu">
                 <div>
-                    <img src="./img/favicon.png" height="40px" alt="logo" class="no-select">
+                    <a class="logo-container" href="./index.html">
+                        <img src="./img/favicon.png" height="40px" width="40px" alt="logo" class="no-select">
+                    </a>
                     <div id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div>
                 </div>
                 <ul>
@@ -45,7 +46,6 @@
             </div>
         </div>
     </header>
-    
     <main>
         <div class="main-wrapper">
             <div class="reponse-wrapper">
