--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="logo-container" href="./index.html">
                         <img src="./img/favicon.png" height="40px" width="40px" alt="logo" class="no-select">
                     </a>
-                    <div aria-label="Rafraîchir la page" id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div>
+                    <div aria-label="Rafraîchir la page" id="reset-position-btn" onclick="location.reload()" class="btn">Rafraîchir les données</div>
                 </div>
                 <ul>
                     <li><a href="./index.html">Accueil</a></li>
