--- a/la-meteo.html
+++ b/la-meteo.html
@@ -51,11 +51,8 @@
         </div>
     </header>
     <main>
-        <div class="loader no-select"></div>
-        <div id="reponse" class=""></div>
-
         <div class="meteo-section">
-            <h2 class="city">La ville</h2>
+            <h2 class="city"></h2>
             <h1></h1>
             <div id="meteo-section-img">
                 <img id="meteo-img" class="no-select" src="" alt="image condition météo" onload="this.classList.add('show')">
@@ -64,17 +61,23 @@
             <div class="ranger">
                 <p>
                     <strong>Température : </strong>
-                    <span class="temp">20°C</span>
+                    <span class="temp"></span>
                 </p>
                 <p>
                     <strong>Humidité : </strong>
-                    <span class="hum">3%</span>
+                    <span class="hum"></span>
+                </p>
+                <p>
+                    <strong>Couverture : </strong>
+                    <span class="couverture"></span>
                 </p>
             </div>
 
             </div>
         </div>
     </main>
+    <div class="loader no-select"></div>
+    <div id="reponse" class=""></div>
     <footer>
         <p>© 2024 Weather For You ⛅️ Tous droits réservés.</p>
     </footer>
