annotations et optimisations

--- a/ma-ville.html
+++ b/ma-ville.html
@@ -52,10 +52,14 @@
     </header>
     <main>
         <div class="main-wrapper">
+            <!-- Réponse de l'IA -->
             <div class="reponse-wrapper">
+                <!-- Réponse floutée en arrière plan -->
                 <div id="reponse-back" class="justify-text no-select"></div>
+                <!-- Réponse claire au premier plan -->
                 <div id="reponse" class=""></div>
             </div>
+            <!-- Loader et alertes sur la page -->
             <div class="loader no-select"></div>
             <div class="alert no-select">
                 <p></p>
