--- a/ma-ville.html
+++ b/ma-ville.html
@@ -55,9 +55,9 @@
             <!-- Réponse de l'IA -->
             <div class="reponse-wrapper">
                 <!-- Réponse floutée en arrière plan -->
-                <div id="reponse-back" class="justify-text no-select"></div>
+                <p id="reponse-back" class="justify-text no-select"></p>
                 <!-- Réponse claire au premier plan -->
-                <div id="reponse" class=""></div>
+                <p id="reponse" class=""></p>
             </div>
             <!-- Loader et alertes sur la page -->
             <div class="loader no-select"></div>
