--- a/ma-ville.html
+++ b/ma-ville.html
@@ -43,7 +43,7 @@
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./la-meteo.html">La météo</a></li>
                 <li><a href="./ma-ville.html">Ma ville</a></li>
-                <li><div aria-label="Rafraîchir la page" id="reset-position-btn" onclick="refreshLocalisationAndReload()" class="btn">Rafraîchir ma position</div></li>
+                <div aria-label="Rafraîchir la page" id="reset-position-btn" onclick="location.reload()" class="btn">Rafraîchir les données</div>
             </ul>
             <div id="return">
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg>
