--- a/ma-ville.html
+++ b/ma-ville.html
@@ -31,7 +31,9 @@
             </nav>
 
             <div id="desktop-bar">
-                <img src="./img/favicon.png" height="40px" alt="logo" class="no-select">
+                <a class="logo-container" href="./index.html">
+                    <img src="./img/favicon.png" height="40px" width="40px" alt="logo" class="no-select">
+                </a>
                 <div aria-label="Ouvrir le menu mobile" id="mobile-menu-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-align-justify"><path d="M3 12h18"/><path d="M3 18h18"/><path d="M3 6h18"/></svg>
                 </div>
